test/fail/error_inference.sest
module ErrorInference = struct

  val f(x) =
    x.foo

  val main(args) =
    f(42)

end
